[gd_scene load_steps=4 format=3 uid="uid://b1j56x8ys4gg"]

[ext_resource type="Script" path="res://scenes/game/entities/characters/wizard/fireball/fire_ball.gd" id="1_gmdvq"]
[ext_resource type="SpriteFrames" uid="uid://dkwquo6tsf6gf" path="res://scenes/game/entities/characters/wizard/fireball_frames.tres" id="1_v4s7w"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mveue"]
radius = 9.0

[node name="FireBall" type="Node2D"]
script = ExtResource("1_gmdvq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.8125, 0.75)
sprite_frames = ExtResource("1_v4s7w")
animation = &"move"
frame_progress = 0.484076
speed_scale = 5.0

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="hitboxe" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 11

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitboxe"]
shape = SubResource("CircleShape2D_mveue")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="hitboxe" to="." method="_on_hitboxe_body_entered"]
